Fixing bugs for editing configured zeroconf printer

This change fixes the bug where if a user attempts to change the URI of
an existing configured zeroconf printer from a link local address to a
static IP address the attempt to add the device would timeout and fail.

This issue was caused by wrongly attempting to perform domain name resolution on
the IP address instead of simply performing the configuration with the
new address.

Bug: 838677
Change-Id: Iba1a8fb8dfd0194138e2d0aa881592027fd713bd
Reviewed-on: https://chromium-review.googlesource.com/c/1109387
Commit-Queue: David Valleau <valleau@chromium.org>
Reviewed-by: Sean Kau <skau@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622091}
Former-commit-id: dd614e746cbe135dae4407ba85f68dc1b295b574